--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,6 +1,32 @@
-/* В этом файле вы опишете значения переменных в разных цветовых схемах.
-Придерживайтесь такого именования классов:
-✦ theme-dark — класс тёмной темы
-✦ theme-light — класс светлой темы
-✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
-*/
+:root.theme-dark {
+  --accent-color: #00cc14;
+  --border-color: #00cc14;
+  --font-color: #00cc14;
+  --background-color: #1A1A1A;
+
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --accent-color: #00cc14;
+    --border-color: #00cc14;
+    --font-color: #00cc14;
+    --background-color: #1A1A1A;
+    }
+  }
+
+:root.theme-light {
+  --accent-color: #E7E7E7;
+  --font-color: #000000;
+  --border-color: #000000;
+  --background-color: #FFFFFF;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #E7E7E7;
+    --font-color: #000000;
+    --border-color: #000000;
+    --background-color: #FFFFFF;
+    }
+  }
