--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,9 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --accent-color: var(--accent-color);
+  --border-color: var(--border-color);
+  --font-color: var(--font-color);
+  --background-color: var(--background-color);
+  --font-pixel_style: 'PressStart2P-Regular', sans-serif;
+  --font-regular: 'Inter-Variable', sans-serif;
+
+}
