--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,5 +5,6 @@
   --background-color: var(--background-color);
   --font-pixel_style: 'PressStart2P-Regular', sans-serif;
   --font-regular: 'Inter-Variable', sans-serif;
+  --like-color: #FF0000;
 
 }
