--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,39 @@ body {
   text-transform: uppercase;
   background-color: var(--background-color);
   border: none;
+  position: relative;
+  outline: none;
 }
+
+   /* -------- двигающаяся трелочка в меню ------- */
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  display: inline-block;
+  animation: rocking 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes rocking {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(4px);
+  }
+}
+
+
+
+
+
+
+
+
+
 
 .theme-menu__item:last-child {
   margin-bottom: 25px;
@@ -131,6 +163,7 @@ body {
   height: 38px;
   background: var(--background-color);
   border: none;
+  outline: none;
   
 }
 
@@ -249,6 +282,12 @@ body {
   mix-blend-mode: difference;
 }
 
+.submit__text {
+  color: var(--font-color);
+  background: var(--background-color);
+  border: 2px solid var(--border-color);
+}
+
 .card__like-button::before {
   content: '';
   position: absolute;
@@ -279,10 +318,34 @@ body {
 }
 
 .floppy {
-  width: 21px;
-  height: 21px;
+  max-width: 39px;
+  height: 39px;
   color: var(--text-color-inverse);
   mix-blend-mode: difference;
+}
+
+.dialog {
+  background: var(--background-color);
+  border: 2px solid var(--border-color);
+  width: 357px;
+  height: 193px;
+}
+
+.dialog-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  /* padding: 30px; */
+  
+}
+
+.container_for_dialog-text {
+  display: flex;
+  gap: 20px;
+}
+
+.dialog.opened {
+  display: flex;
 }
 
 .save-button {
@@ -295,7 +358,9 @@ body {
   background: var(--background-color);
   border: 2px solid var(--border-color);
   z-index: 1;
+  outline: none;
 }
+
 
 /* --------- hover save button ----------  */
 
@@ -309,9 +374,35 @@ body {
   background: linear-gradient(to right, var(--border-color), var(--border-color));
   transition: all 1s;
   z-index: 0;
-  
 }
 
 .save-button:hover::before {
+  width: 100%;
+}
+
+
+/* ----------------- hover menu -----  это работает   ------------------- */
+
+.theme-menu__button:hover {
+  position: relative;
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+/* ----------------- active menu   ------------------- */
+
+
+.theme-menu__button::after {
+  position: absolute;
+  content: "";
+  top: 15px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: currentColor;
+  transition: width 0.5s ease;
+}
+
+.theme-menu__button:focus::after {
   width: 100%;
 }
