--- a/styles/style.css
+++ b/styles/style.css
@@ -29,21 +29,22 @@ body {
   align-items: center;
 }
 
-/* .cover {
-   background-image: url(../svg/background.svg);
+.cover {
+   background-image: var(--background-image);
    background-size: cover;
-   background: repeating-linear-gradient( #e7e7e7, #1a1a1a);
-} */
+   height: 960px;
+   width: 1140px;
+}
 
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-image: url(../svg/background.svg); */
   max-width: 700px;
   border: 2px solid var(--border-color);
   color: var(--font-color);
   font-family: var(--font-pixel_style);
+  background-color: var(--background-color);
 }
 
 
@@ -68,7 +69,8 @@ body {
   font-weight: 400;
   line-height: 14px;
   text-transform: uppercase;
-  background-color: var(--background-color);
+  background-color: transparent;
+  /* background-color: var(--background-color); */
   border: none;
   position: relative;
   outline: none;
@@ -97,11 +99,38 @@ body {
 
 
 
+/* .watermark-text {
+  position: relative;
+  mix-blend-mode: hard-light;
+  width: 98px;
+  top: 45px;
+  left: 573px;
+  opacity: 0.5;
+  font-family: var(--font-pixel_style);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  text-align: right;
+} */
 
+.wrapper {
+  position: relative;
+}
 
+.watermark::after {
+  position: absolute;
+  content: "<desigions>";
+  top: 45px;
+  right: 25px;
+  opacity: 0.5;
+  font-family: var(--font-pixel_style);
+}
 
-
-
+@supports (-webkit-text-stroke: 1px var(--text-color-inverse)) {
+  .watermark-text {
+    -webkit-text-stroke: 1px var(--text-color-inverse);
+  }
+}
 
 
 .theme-menu__item:last-child {
@@ -121,6 +150,7 @@ body {
   margin-bottom: 50px;
   border: 2px solid var(--border-color);
   color: var(--font-color);
+  background-color: var(--background-color);
 }
 
 .section_block:last-child {
@@ -336,7 +366,11 @@ body {
   flex-direction: column;
   gap: 30px;
   /* padding: 30px; */
-  
+}
+
+.dialog::backdrop {
+  background:  #000000;
+  opacity: 0.75;
 }
 
 .container_for_dialog-text {
