--- a/styles/style.css
+++ b/styles/style.css
@@ -17,16 +17,12 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   background-color: var(--background-color);
-  height: 3000px;
   background-attachment: fixed;
-}
-
-body {
   font-family: var(--font-regular);
   display: flex;
   flex-direction: column;
   align-items: center;
-} 
+}
 
 .cover {
    background-image:  var(--background-gradient-image);
@@ -44,14 +40,13 @@ body {
   background-color: var(--background-color);
   margin-top: 102px;
   margin-bottom: 102px;
-  width: 100vh;
-  max-width: 700px;
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   min-height: 364px;
 }
 
 .section_block {
   position: relative;
-  width: 100vh;
+  width: clamp(23.4375rem, 16.3732rem + 30.1408vw, 43.5rem);
   max-width: 696px;
   margin-bottom: 50px;
   border: 2px solid var(--border-color);
@@ -68,7 +63,7 @@ body {
 }
 
 .theme-menu {
-  transform: translateX(20px);
+  transform: translateX(24px);
 }
 
 .theme-menu__list {
@@ -80,7 +75,7 @@ body {
 
 .theme-menu__button:disabled {
   opacity: 0.6;
-  transform: translateX(-20px);
+  transform: translateX(-30px);
 }
 
 .theme-menu__button {
@@ -92,10 +87,14 @@ body {
   border: none;
 }
 
+.watermark {
+  margin: 0;
+}
+
 .watermark-text {
   position: absolute;
   mix-blend-mode: hard-light;
-  min-width: 280px;
+  max-width: 280px;
   top: 60px;
   right: 25px;
   opacity: 0.5;
@@ -114,15 +113,11 @@ body {
 
 .header__text {
   font-family: var(--font-pixel_style);
-  font-size: 65px;
   font-weight: 400;
   line-height: 65px;
   margin-bottom: 20px;
   margin-top: 136px;
-}
-
-.block_picture {
-  height: 700px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
 }
 
 .section_block:last-child {
@@ -140,6 +135,7 @@ body {
   margin-right: 25px;
   margin-top: 26px;
   font-size: 18px;
+  line-height: 21px;
 }
 
 .block_text:last-of-type {
@@ -158,7 +154,8 @@ body {
   object-position: center;
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 700px;
+  border: 2px solid var(--border-color);
 }
 
 .card__icon-button {
@@ -189,6 +186,7 @@ body {
 .button__text {
   color: var(--text-color-inverse);
   mix-blend-mode: difference;
+  font-size: 14px;
 }
 
 .submit__text {
@@ -273,12 +271,8 @@ body {
   align-self: center;
 }
 
-.dialog.opened {
-  /* display: flex; */
-}
-
 .save-button {
-  width: 335px;
+  min-width: 335px;
   height: 55px;
   margin-bottom: 103px;
   margin-top: 52px;
@@ -289,6 +283,10 @@ body {
   border: 2px solid var(--border-color);
   z-index: 1;
   outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 /* --------- hover save button ----------  */
@@ -330,18 +328,23 @@ body {
   transition: width 0.5s ease;
 }
 
+
+
 .theme-menu__button:focus::after {
-  width: 100%;
+  width: 80px;
 }
+
 
 @media (width <= 376px) {
 
   .header__text {
-    font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+    line-height: 49px;
+    margin-top: 120px;
   }
 
   .header__title {
     font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+    line-height: 14px;
   }
   
   .save-button {
@@ -351,16 +354,10 @@ body {
     height: 84px;
   } 
 
-  .save-button {
-    margin-bottom: 100px;
-    gap: 8px;
-  }
-
   .floppy {
     align-self: center;
     max-width: 28px;
     height: 28px;
-    margin-top: 15px;
   }
 
   .save-button .button__text {
@@ -369,7 +366,7 @@ body {
 
   .header {
     max-width: 371px;
-    min-height: 364px;
+    min-height: 323px;
   }
   
   .section_block {
@@ -377,17 +374,58 @@ body {
     max-width: 375px;
   }
 
-  .block_picture {
-    min-height: 375px;
+  .picture {
+    max-height: 375px;
+  }
+
+  .watermark-text {
+    top: 78px;
+    right: 12px;
+  }
+
+  /* .section_block:not(:nth-last-of-type(1)) .watermark-text {
+    top: 57px;
+    right: 12px;
+  } */
+
+  .section_block:nth-of-type(2) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(3) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(4) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(5) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(6) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(7) .watermark-text {
+    top: 57px;
+    right: 12px;
+  }
+
+  .section_block:nth-of-type(8) .watermark-text {
+    top: 57px;
+    right: 12px;
   }
 
   .save-button::before {
     height: 80px;
   }
-
-
-
-
 
   .submit__text {
     width: 257px;
@@ -396,12 +434,5 @@ body {
   .button__text {
     font-size: 14px;
   }
-
-
-
-  /* .picture {
-    filter: opacity(0.5);
-
-  } */
 
 }
