--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,36 +1,27 @@
 :root.theme-dark {
-  --accent-color: #00cc14;
   --border-color: #00cc14;
   --font-color: #00cc14;
-  --background-color: #1A1A1A;
+  --background-color: #000;
   --background-color-inverse: #00cc14;
   --text-color-inverse: #00cc14;
   --background-gradient-image: repeating-linear-gradient(to right, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
   repeating-linear-gradient(to bottom, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
   linear-gradient(#007f0c 0.01%, #004306);
-  /* --background-image: url("../images/background-dark.png"); */
-  /* --background-gradient-horizontal: repeating-linear-gradient(transparent, #000 2px); */
-  /* --background-gradient-vertical: repeating-linear-gradient(90deg, #007f0c, #004306 2px); */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --accent-color: #00cc14;
     --border-color: #00cc14;
     --font-color: #00cc14;
-    --background-color: #1A1A1A;
+    --background-color: #000;
     --text-color-inverse: #00cc14;
     --background-gradient-image: repeating-linear-gradient(to right, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
   repeating-linear-gradient(to bottom, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
   linear-gradient(#007f0c 0.01%, #004306);
-    /* --background-image: url("../images/background-dark.png"); */
-    /* --background-gradient-horizontal: repeating-linear-gradient(transparent, #000 2px); */
-    /* --background-gradient-vertical: repeating-linear-gradient(90deg, #007f0c, #004306 2px); */
     }
   }
 
 :root.theme-light {
-  --accent-color: #E7E7E7;
   --font-color: #000000;
   --border-color: #000000;
   --background-color: #FFFFFF;
@@ -38,12 +29,10 @@
   --background-gradient-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
   repeating-linear-gradient(to bottom, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
   linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-  /* --background-image: url("../images/background-light.png"); */
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --accent-color: #E7E7E7;
     --font-color: #000000;
     --border-color: #000000;
     --background-color: #FFFFFF;
@@ -51,6 +40,5 @@
     --background-gradient-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
   repeating-linear-gradient(to bottom, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
   linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-    /* --background-image: url("../images/background-light.png"); */
     }
   }
