--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --accent-color: var(--accent-color);
+  --accent-color: default;
   --border-color: var(--border-color);
   --font-color: var(--font-color);
   --background-color: var(--background-color);
