--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,3 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, 
-чтобы в HTML некоторые классы были названы особым образом:
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
-
-*/
-
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -47,7 +32,6 @@
 .section_block {
   position: relative;
   width: clamp(23.4375rem, 16.3732rem + 30.1408vw, 43.5rem);
-  max-width: 696px;
   margin-bottom: 50px;
   border: 2px solid var(--border-color);
   color: var(--font-color);
@@ -60,31 +44,6 @@
   line-height: 23px;
   text-transform: uppercase;
   margin-bottom: 20px;
-}
-
-.theme-menu {
-  transform: translateX(24px);
-}
-
-.theme-menu__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 12px;
-}
-
-.theme-menu__button:disabled {
-  opacity: 0.6;
-  transform: translateX(-30px);
-}
-
-.theme-menu__button {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 14px;
-  text-transform: uppercase;
-  background-color: transparent;
-  border: none;
 }
 
 .watermark {
@@ -147,6 +106,7 @@
   justify-content: flex-end;
   margin-bottom: 25px;
   margin-right: 25px;
+  gap: 5px;
 }
 
 .picture {
@@ -159,15 +119,21 @@
 }
 
 .card__icon-button {
-  font-family: var(--font-pixel_style);
   height: 38px;
-  background: var(--background-color);
-  border: none;
-  outline: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  display: grid;
+  align-items: end;
+  border: 2px solid transparent;
 }
-/* ---- правая кнопка like button  --------  */
 
 .card__like-button:focus {
+  box-shadow: 2px 2px;
+  outline: none;
+}
+
+.card__icon-button:focus .card__like-button{
   box-shadow: 2px 2px;
   outline: none;
 }
@@ -182,37 +148,6 @@
   border: 2px solid var(--border-color);
   z-index: 1;
 }
-
-.button__text {
-  color: var(--text-color-inverse);
-  mix-blend-mode: difference;
-  font-size: 14px;
-}
-
-.submit__text {
-  width: 293px;
-  height: 38px;
-  color: var(--font-color);
-  background: var(--background-color);
-  border: 2px solid var(--border-color);
-}
-
-.card__like-button::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 35px;
-  background: linear-gradient(to right, var(--border-color), var(--border-color));
-  transition: all 1s;
-  z-index: 0;
-}
-
-.card__like-button:hover::before {
-  width: 100%;
-}
-/* ---------  save button ----------  */
 
 .footer {
   display: flex;
@@ -253,10 +188,6 @@
   height: 39px;
 }
 
-.button__text {
-  line-height: 21px;
-}
-
 .dialog::backdrop {
   background:  #000000;
   opacity: 0.75;
@@ -271,8 +202,106 @@
   align-self: center;
 }
 
+.theme-menu {
+  transform: translateX(24px);
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 12px;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  transform: translateX(-30px);
+}
+
+.theme-menu__button:focus {
+  outline: 0;
+  opacity: 0.6;
+}
+
+.theme-menu__button {
+  position: relative;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+}
+
+.theme-menu__button:hover {
+  position: relative;
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  display: block;
+  position: absolute;
+  content: "";
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: currentColor;
+  transition: width 0.5s ease;
+}
+
+.theme-menu__button:focus::after {
+  width: 100%;
+}
+
+.card__like-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 35px;
+  background: linear-gradient(to right, var(--border-color), var(--border-color));
+  transition: all 1s;
+  z-index: 0;
+}
+
+.card__like-button:hover::before {
+  width: 100%;
+  cursor: pointer;
+}
+
+.dialog-form {
+  color: var(--text-color-inverse);
+}
+
+.submit__text {
+  position: relative;
+  z-index: 1;
+  width: 293px;
+  height: 38px;
+  background: var(--background-color);
+  border: 2px solid var(--border-color);
+}
+
+.submit__text::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 37px;
+  background: linear-gradient(to right, var(--border-color), var(--border-color));
+  transition: all 1s;
+  z-index: 0;
+}
+
+.submit__text:hover::before {
+  width: 100%;
+}
+
 .save-button {
-  min-width: 335px;
+  width: 335px;
   height: 55px;
   margin-bottom: 103px;
   margin-top: 52px;
@@ -289,7 +318,25 @@
   gap: 8px;
 }
 
-/* --------- hover save button ----------  */
+.block_button .button__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 12.6px;
+}
+
+.dialog .button__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-transform: uppercase;
+}
+
+.button__text {
+  line-height: 21px;
+  color: var(--text-color-inverse);
+  mix-blend-mode: difference;
+  font-weight: 400;
+}
 
 .save-button::before {
   content: '';
@@ -306,34 +353,6 @@
 .save-button:hover::before {
   width: 100%;
 }
-
-/* ----------------- hover menu -----  это работает   ------------------- */
-
-.theme-menu__button:hover {
-  position: relative;
-  cursor: pointer;
-  opacity: 0.6;
-}
-
-/* ----------------- active menu   ------------------- */
-
-.theme-menu__button::after {
-  position: absolute;
-  content: "";
-  top: 15px;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background: currentColor;
-  transition: width 0.5s ease;
-}
-
-
-
-.theme-menu__button:focus::after {
-  width: 80px;
-}
-
 
 @media (width <= 376px) {
 
@@ -383,11 +402,6 @@
     right: 12px;
   }
 
-  /* .section_block:not(:nth-last-of-type(1)) .watermark-text {
-    top: 57px;
-    right: 12px;
-  } */
-
   .section_block:nth-of-type(2) .watermark-text {
     top: 57px;
     right: 12px;
@@ -435,4 +449,7 @@
     font-size: 14px;
   }
 
+  .dialog .button__text {
+    line-height: 21px;
+  }
 }
