--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,8 @@
   object-fit: cover;
   width: 100%;
   height: 700px;
-  border: 2px solid var(--border-color);
+  border-top: 2px solid var(--border-color);
+  border-bottom: 2px solid var(--border-color);
 }
 
 .card__icon-button {
@@ -202,8 +203,8 @@
   align-self: center;
 }
 
-.theme-menu {
-  transform: translateX(24px);
+.header__theme-menu {
+  transform: translateX(10px);
 }
 
 .theme-menu__list {
@@ -213,9 +214,12 @@
   gap: 12px;
 }
 
+.theme-menu__item {
+  position: relative;
+}
+
 .theme-menu__button:disabled {
   opacity: 0.6;
-  transform: translateX(-30px);
 }
 
 .theme-menu__button:focus {
@@ -252,6 +256,10 @@
 
 .theme-menu__button:focus::after {
   width: 100%;
+}
+
+.theme-menu__button:active::after {
+  width: 0;
 }
 
 .card__like-button::before {
@@ -354,6 +362,12 @@
   width: 100%;
 }
 
+.watermark-text {
+  position: absolute;
+  top: 58px;
+  right: 22px;
+}
+
 @media (width <= 376px) {
 
   .header__text {
@@ -397,46 +411,6 @@
     max-height: 375px;
   }
 
-  .watermark-text {
-    top: 78px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(2) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(3) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(4) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(5) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(6) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(7) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
-  .section_block:nth-of-type(8) .watermark-text {
-    top: 57px;
-    right: 12px;
-  }
-
   .save-button::before {
     height: 80px;
   }
@@ -451,5 +425,10 @@
 
   .dialog .button__text {
     line-height: 21px;
+  }
+
+  .watermark-text {
+    top: 78px;
+    right: 10px;
   }
 }
